--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
     <div class="title">Notes</div>
     <div class="create">Create Notes</div>
     <div class="container">
-        <p class="text"></p>
-        <p class="text"></p>
-        <p class="text"></p>
-        <p class="text"></p>
-        <p class="text"></p>
-        <p class="text"></p>
-        <p class="text"></p>
-        <p class="text"></p>
+        <div contenteditable="true" class="text"><img src="delete.png" alt=""></div>
+        <div contenteditable="true" class="text"><img src="delete.png" alt=""></div>
+        <div contenteditable="true" class="text"><img src="delete.png" alt=""></div>
+        <div contenteditable="true" class="text"><img src="delete.png" alt=""></div>
+        <div contenteditable="true" class="text"><img src="delete.png" alt=""></div>
+        <div contenteditable="true" class="text"><img src="delete.png" alt=""></div>
+        <div contenteditable="true" class="text"><img src="delete.png" alt=""></div>
+
     </div>
-    </body>
+    <div class="pop-up">
+        <div class="pop-up-content">
+            <button class="back">Back</button>
+            <div class="content"></div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
